--- a/css/main.css
+++ b/css/main.css
@@ -288,7 +288,6 @@ div.quiz-container{
 	text-align: left;
 }
 .questao{
-	display: none;
 	position: relative;
 	font-size: 18px;
 	padding-top: 3%;
@@ -380,7 +379,7 @@ div.quiz-container{
 	/* background-color: white; */
 	margin: -20px auto 40px auto;
 	font-family: "Myriad Pro";
-	font-size: 18px;	
+	font-size: 18px;
 	color: white;
 }
 
@@ -392,7 +391,7 @@ div.quiz-container{
 	height:100%;
 	background-color: rgba(0,0,0,0.8);
 	top:0;
-	left:0; 
+	left:0;
 }
 .shadow-container{
 	display: block;
@@ -425,17 +424,17 @@ div.quiz-container{
 }
 
 /* Main content area */
- 
-#content {
-  margin: 80px 40px;
+
+.content {
+  margin: 50px 40px;
   text-align: center;
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
 }
- 
+
 /* Header/footer boxes */
- 
+
 .wideBox {
   clear: both;
   text-align: center;
@@ -444,29 +443,29 @@ div.quiz-container{
   background: #ebedf2;
   border: 1px solid #333;
 }
- 
+
 .wideBox h1 {
   font-weight: bold;
   margin: 20px;
   color: #666;
   font-size: 1.5em;
 }
- 
+
 /* Slots for final card positions */
- 
-#cardSlots {
+
+.cardSlots {
   margin: 50px auto 50px auto;
   background: #ddf;
 }
- 
+
 /* The initial pile of unsorted cards */
- 
-#cardPile {
+
+.cardPile {
   margin: 0 auto;
   background: #fff;
 }
- 
-#cardSlots, #cardPile {
+
+.cardSlots, .cardPile {
   width: 710px;
   height: 120px;
   padding: 20px;
@@ -478,10 +477,10 @@ div.quiz-container{
   -webkit-box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
   box-shadow: 0 0 .3em rgba(0, 0, 0, .8);
 }
- 
+
 /* Individual cards and slots */
- 
-#cardSlots div, #cardPile div {
+
+.cardSlots div, .cardPile div {
   float: left;
   width: 145px;
   height: 78px;
@@ -495,41 +494,41 @@ div.quiz-container{
   margin: 0 0 0 10px;
   background: #fff;
 }
- 
-#cardSlots div:first-child, #cardPile div:first-child {
+
+.cardSlots div:first-child, .cardPile div:first-child {
   margin-left: 0;
 }
- 
-#cardSlots div.hovered {
+
+.cardSlots div.hovered {
   background: #aaa;
 }
- 
-#cardSlots div {
+
+.cardSlots div {
   border-style: dashed;
 }
- 
-#cardPile div {
+
+.cardPile div {
   background: #666;
   color: #fff;
   font-size: 20px;
   text-shadow: 0 0 3px #000;
 }
- 
-#cardPile div.ui-draggable-dragging {
+
+.cardPile div.ui-draggable-dragging {
   -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
   -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
   box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
 }
- 
+
 /* Individually coloured cards */
- 
-#card1.correct { background: red; }
+
+/* #card1.correct { background: red; }
 #card2.correct { background: brown; }
 #card3.correct { background: orange; }
-#card4.correct { background: yellow; } 
- 
+#card4.correct { background: yellow; } */
+
 /* "You did it!" message */
-#successMessage {
+/* #successMessage {
   position: absolute;
   margin: auto auto;
   width: 350px;
@@ -544,7 +543,7 @@ div.quiz-container{
   -webkit-box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
   box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
   padding: 20px;
-}
+} */
 
 #q22{
 	display: block;
